--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -3,13 +3,21 @@ html(lang=config.language)
     head
         include head
     body
-        include scripts
-        .wrapper
-            header
-                block header
+        .container
+            include scripts
+            .wrapper
+                header
+                    block header
 
-            .side-nav
-                .side-nav-inner
-                    include nav
-            main
-                block container
+                .side-nav
+                    .side-nav-inner
+                        include nav
+                        .metadata
+                            p.
+                                此文章发布于 8 月 19 日 (星期六)
+                .spacing
+                    .spacing-inner
+
+                main
+                    .content
+                        block content
