Basic article navbar and index spacing

--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -12,9 +12,11 @@ html(lang=config.language)
                 .side-nav
                     .side-nav-inner
                         include nav
+                        .divider-curly-short
                         .metadata
                             p.
                                 此文章发布于 8 月 19 日 (星期六)
+
                 .spacing
                     .spacing-inner
 
