position change from `fixed` to `sticky`

--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -23,3 +23,5 @@ html(lang=config.language)
                 main
                     .content
                         block content
+            footer
+                include footer
