--- a/source/sass/_layout.scss
+++ b/source/sass/_layout.scss
@@ -17,7 +17,10 @@
 .side-nav {
     &-inner {
         overflow: auto;
-        position: fixed;
+        // fixed doesn't has a height, use `position: sticky` instead.
+        // position: fixed;
+        position: sticky;
+        top: 0;
     }
 
     nav {
