--- a/source/sass/brutalist.scss
+++ b/source/sass/brutalist.scss
@@ -8,4 +8,8 @@
 @import "main";
 @import "layout";
 @import "component";
+
+@import "articles/layout";
+@import "articles/notes";
+
 @import "press";
