--- a/layout/partial/footer.jade
+++ b/layout/partial/footer.jade
@@ -4,3 +4,12 @@
 - var year = currentDate.getFullYear();
 - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
 p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexo_url, target="_blank") Hexo] and #[a(href=theme_url, target="_blank") hexo-theme-brutalist].
+ul
+    li 
+        a(href=config.url) home
+    li  
+        a(href="#") brutalist
+    li 
+        a(href="#") email
+    li
+        a(href="#") atom
