--- a/source/sass/_layout.scss
+++ b/source/sass/_layout.scss
@@ -1,16 +1,15 @@
 
 .content, .side-nav, .spacing {
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 16vmin;
 }
 
 .side-nav, .spacing {
-    margin-left: 10px;
-    margin-right: 10px;
-    min-width: 150px;
+    margin: 0 1rem 0 1rem;
+    min-width: 8vw;
 
     &-inner {
-        width: 120px;
+        width: 8vw;
     }
 }
 
@@ -20,7 +19,7 @@
         // fixed doesn't has a height, use `position: sticky` instead.
         // position: fixed;
         position: sticky;
-        top: 0;
+        top: 50px;
     }
 
     nav {
@@ -56,14 +55,14 @@
     }
 
     .metadata {
-        font-size: .85rem;
         line-height: 1.4em;
         text-align: right;
 
         margin-right: 2px;
 
         p {
-            margin: 15px 0;
+            margin: 1rem 0;
+            font-size: 0.9rem;
         }
     }
 }
