--- a/layout/article.jade
+++ b/layout/article.jade
@@ -1,8 +1,16 @@
 extends partial/layout
 
 block site_title
-    != page.title + " // " + config.title
+    != page.title + " · " + config.title
 
 block description
     - var desc = page.desc || page.title + ' - ' + config.title
     meta(name="description", content=desc)
+
+block header
+    include mixins/article
+    +article_header(page)
+
+block content
+    include mixins/article
+    +article_content(page)
