--- a/source/sass/_article.scss
+++ b/source/sass/_article.scss
@@ -1,12 +1,25 @@
 article {
+    a.linea {
+        margin-left: 5px;
+        opacity: .3 !important;
+        text-decoration: none;
+        border: 0;
+
+        &:hover {
+            color: $code-color;
+            background-image: none;
+        }
+    }
+
     figure {
         max-width: 100%;
         overflow: visible;
         position: relative;
+        font-size: 75%;
     }
 
     figcaption {
-        font-size: 1vw;
+        font-size: .87rem;
         line-height: 1.5em;
         padding: 1em 0 0 0;
         position: absolute;
@@ -14,6 +27,7 @@ article {
         text-align: right;
         left: -9vw;
         width: 8vw;
+        opacity: .7;
     }
 }
 
