--- a/source/sass/brutalist.scss
+++ b/source/sass/brutalist.scss
@@ -1,8 +1,8 @@
 @import "variables";
-// @import "mixins";
+@import "mixins";
 
-// @include font-face("Iosevka", fonts/iosevka-regular, null, normal, woff2);
-// @include font-face("Iosevka", fonts/iosevka-bold, 700, bold, woff2);
+@include font-face("Iosevka", fonts/iosevka-regular, null, normal, woff2);
+@include font-face("Iosevka", fonts/iosevka-bold, 700, bold, woff2);
 
 @import "reset";
 @import "main";
