social button and gotoTop button added

--- a/layout/article.jade
+++ b/layout/article.jade
@@ -14,3 +14,10 @@ block header
 block content
     include mixins/article
     +article_content(page)
+
+block layer
+    include partial/gotoTop
+
+block share
+    include mixins/share
+    +share(page)
