--- a/source/sass/_layout.scss
+++ b/source/sass/_layout.scss
@@ -22,7 +22,7 @@
         top: 11vmin;
     }
 
-    nav {
+    .share, nav {
         font-family: $fontstack-sans-serif;
         font-size: 1.2rem;
         font-weight: bold;
