--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -4,12 +4,13 @@ html(lang=config.language)
         include head
     body
         .container
-            //- include scripts
+            include scripts
             .wrapper
                 .side-nav
                     .side-nav-inner
                         include nav
-                        .divider
+                        .divider-bold
+                        block share
 
                 .spacing
                     .spacing-inner
@@ -19,5 +20,6 @@ html(lang=config.language)
                         header
                             block header
                         block content
+                block layer
         footer
             include footer
